--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="common_loading">Loading</string>
     <string name="common_back">Back</string>
     <string name="common_close">Close</string>
+    <string name="common_button">Button</string>
 </resources>
